# space-invaders-clone

./: README.md  pyproject.toml
src/space_invaders/: __init__.py  main.py  settings.py
src/space_invaders/components/: box_collider_2d.py  sprite_renderer.py  transform.py
src/space_invaders/core/: game_engine.py  game_object.py  input_manager.py  mono_behaviour.py  physics_2d.py  scene.py  scene_manager.py  time_manager.py
src/space_invaders/prefabs/: barrier_prefab.py  bullet_prefab.py  invader_prefab.py  player_prefab.py
src/space_invaders/scenes/: game_over_scene.py  game_scene.py  menu_scene.py
src/space_invaders/scripts/: audio_manager.py  barrier_controller.py  bullet_controller.py  game_manager.py  invader_controller.py  invader_formation.py  player_controller.py  ufo_controller.py  ui_manager.py
src/space_invaders/utils/: sprite_utils.py
tests/: test_game_object.py  test_physics_2d.py  test_transform.py
